# gstreamer

./: CMakeLists.txt
cmake/modules/: FindGStreamer.cmake  FindGlib.cmake
plugin/: mygstplugin.c  mygstplugin.h
src/: raw_audio.c
